--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "eslint-config-next": "13.4.13",
     "next": "13.4.13",
     "next-images": "^1.8.5",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-responsive": "^9.0.2"
   },
   "devDependencies": {
     "@types/node": "18.14.2",
